--- a/BlazorUserApp.Client/wwwroot/index.html
+++ b/BlazorUserApp.Client/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/newEditUserForm.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorUserApp.Client.styles.css" rel="stylesheet" />
 </head>
